--- a/src/app/components/profiles/au-profile/au-profile.component.html
+++ b/src/app/components/profiles/au-profile/au-profile.component.html
@@ -3,7 +3,7 @@
     <div class="header-overlay">
       <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
 
-      <mat-icon class="profile-icon" routerLink="/organizer-profile">account_circle</mat-icon>
+      <mat-icon class="profile-icon" routerLink="/au-profile">account_circle</mat-icon>
 
       <div class="logo-container">
         <img class="logo">
@@ -21,18 +21,6 @@
 </header>
 
 <div class="profile-container">
-  <div class="profile-photo-container">
-    <!-- Service and Product Provider: Photo Carousel -->
-    <ng-template #sppPhotos>
-      <div class="photo-carousel">
-        <ng-template #noPhotos>
-          <img src="../../../../../assets/images/no_photos.jpg" alt="No photos available" class="profile-photo">
-        </ng-template>
-      </div>
-    </ng-template>
-
-  </div>
-
   <div class="profile-info">
    <ul>
       <li><strong>Email:</strong> {{ user.email || 'No email available' }}</li>
@@ -46,8 +34,6 @@
     </div>
   </div>
 </div>
-
-<!-- DODATI PROMENU U PUP ILI EO -->
 
 <!-- Password Modal Popup -->
 <div class="change-password-modal-overlay" *ngIf="showPasswordModal" (click)="closePasswordModal()">
