added functionality for upgrading au to organizer

--- a/src/app/components/drawers/drawer-navbar-au/drawer-navbar-au.component.html
+++ b/src/app/components/drawers/drawer-navbar-au/drawer-navbar-au.component.html
@@ -2,7 +2,7 @@
 <div class="sidebar" [class.open]="isSidebarOpen">
   <ul>
     <li>Home</li>
-    <li routerLink="app-update-as-organizer">Become an event organizer</li>
-    <li routerLink="app-update-as-provider">Become a product and service provider</li>
+    <li (click)="updateAuAsOrganizer()">Become an event organizer</li>
+    <li (click)="updateAuAsProvider()">Become a product and service provider</li>
   </ul>
 </div>
