added logout and drawers on every page

--- a/src/app/components/drawers/drawer-navbar-admin/drawer-navbar.component.html
+++ b/src/app/components/drawers/drawer-navbar-admin/drawer-navbar.component.html
@@ -9,7 +9,7 @@
     <li (click)="toggleReportsSidebar()">Reports</li>
     <li (click)="toggleNotificationsSidebar()">Notifications</li>
     <li>Profile</li>
-    <li>Log out</li>
+    <li (click) ="logOut()">Log out</li>
   </ul>
 </div>
 
