--- a/src/app/components/drawers/drawer-navbar-organizer/drawer-navbar-organizer.component.html
+++ b/src/app/components/drawers/drawer-navbar-organizer/drawer-navbar-organizer.component.html
@@ -9,7 +9,7 @@
     <li>Favourite services/products</li>
     <li>Messages</li>
     <li (click)="toggleNotificationsSidebar()">Notifications </li>
-    <li>Log out</li>
+    <li (click)="logOut()">Log out</li>
   </ul>
 </div>
 
