--- a/src/app/components/drawers/drawer-navbar-provider/drawer-navbar-provider.component.html
+++ b/src/app/components/drawers/drawer-navbar-provider/drawer-navbar-provider.component.html
@@ -9,7 +9,7 @@
     <li>Price list</li>
     <li (click)="toggleNotificationsSidebar()">Notifications</li>
     <li>Messages</li>
-    <li>Log out</li>
+    <li (click)="logOut()">Log out</li>
   </ul>
 </div>
 
