--- a/src/app/components/profiles/provider-profile/provider-profile.component.html
+++ b/src/app/components/profiles/provider-profile/provider-profile.component.html
@@ -3,6 +3,16 @@
     <div class="header-overlay">
       <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
 
+      <!-- Right profile, notifications, and messages icons -->
+      <div class="header-icons">
+        <div class="notifications-container">
+          <mat-icon class="notifications-icon" (click)="openNotifications()">notifications</mat-icon>
+          <span *ngIf="unreadCount > 0" class="unread-count">{{ unreadCount }}</span>
+        </div>
+        <mat-icon class="messages-icon" routerLink="/messages">message</mat-icon>
+        <mat-icon class="profile-icon" routerLink="/provider-profile">account_circle</mat-icon>
+      </div>
+
       <mat-icon class="profile-icon" routerLink="/provider-profile">account_circle</mat-icon>
 
       <div class="logo-container">
@@ -19,6 +29,9 @@
     </div>
   </div>
 </header>
+
+<app-drawer-navbar-provider [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-provider>
+<app-notifications [isNotificationsOpen]="isNotificationsOpen"></app-notifications>
 
 <app-info></app-info>
 
