--- a/src/app/components/profiles/au-profile/au-profile.component.css
+++ b/src/app/components/profiles/au-profile/au-profile.component.css
@@ -47,7 +47,7 @@ header {
 }
 
 /* Icons */
-.burger-icon, .profile-icon {
+.burger-icon {
   position: absolute;
   top: 20px;
   font-size: 30px;
@@ -57,17 +57,32 @@ header {
   z-index: 110;
 }
 
-.burger-icon {
-  left: 20px;
-}
-
-.profile-icon {
+/* Header icons container (profile, notifications, messages) */
+.header-icons {
+  position: absolute;
+  top: 20px;
   right: 20px;
+  display: flex;
+  align-items: center;
+  gap: 15px; /* Space between icons */
 }
 
-.profile-icon:hover {
-  color: #d9d9d9;
+/* Profile icon */
+.profile-icon, .notifications-icon, .messages-icon {
+  font-size: 30px;
+  cursor: pointer;
+  color: #523D35;
+  z-index: 3;  /* Ensure it stays on top of other elements */
+  padding: 5px;
 }
+
+.profile-icon:hover,
+.notifications-icon:hover,
+.messages-icon:hover {
+  color: #d9d9d9; /* Change color on hover for all icons */
+}
+
+
 
 /* Logo */
 .logo-container {
