--- a/src/app/components/profiles/organizer-profile/organizer-profile.component.html
+++ b/src/app/components/profiles/organizer-profile/organizer-profile.component.html
@@ -3,7 +3,15 @@
     <div class="header-overlay">
       <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
 
-      <mat-icon class="profile-icon" routerLink="/organizer-profile">account_circle</mat-icon>
+      <!-- Right profile, notifications, and messages icons -->
+      <div class="header-icons">
+        <div class="notifications-container">
+          <mat-icon class="notifications-icon" (click)="openNotifications()">notifications</mat-icon>
+          <span *ngIf="unreadCount > 0" class="unread-count">{{ unreadCount }}</span>
+        </div>
+        <mat-icon class="messages-icon" routerLink="/messages">message</mat-icon>
+        <mat-icon class="profile-icon" routerLink="/organizer-profile">account_circle</mat-icon>
+      </div>
 
       <div class="logo-container">
         <img class="logo">
@@ -19,6 +27,9 @@
     </div>
   </div>
 </header>
+
+<app-drawer-navbar-organizer [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-organizer>
+<app-notifications [isNotificationsOpen]="isNotificationsOpen"></app-notifications>
 
 <app-info></app-info>
 
