--- a/src/app/components/event-management/create-event/create-event.component.html
+++ b/src/app/components/event-management/create-event/create-event.component.html
@@ -106,6 +106,7 @@
       </button>
     </div>
 
+    <!-- Location -->
     <div class="form-group location-autocomplete-group">
       <input
         [(ngModel)]="locationSearch"
@@ -133,6 +134,7 @@
           [matDatepicker]="startPicker"
           [(ngModel)]="eventData.startDate"
           name="startDate"
+          [min]="today"
           (dateChange)="onStartDateChange()">
         <mat-datepicker-toggle matIconSuffix [for]="startPicker"></mat-datepicker-toggle>
         <mat-datepicker #startPicker></mat-datepicker>
@@ -146,6 +148,7 @@
           [matDatepicker]="endPicker"
           [(ngModel)]="eventData.endDate"
           name="endDate"
+          [min]="today"
           (dateChange)="onEndDateChange()">
         <mat-datepicker-toggle matIconSuffix [for]="endPicker"></mat-datepicker-toggle>
         <mat-datepicker #endPicker></mat-datepicker>
