added page for review of joined events

--- a/src/app/components/home/home-guest/home.component.html
+++ b/src/app/components/home/home-guest/home.component.html
@@ -21,7 +21,7 @@
 
       <!-- Navigation links -->
       <div class="nav-links">
-        <a href="#">HOME</a> | <a href="#">PROFILE</a> | <a href="#">SETTINGS</a>
+        <a href="#">HOME</a> | <a href="#">PROFILE</a>
       </div>
     </div>
   </div>
