--- a/src/app/components/home/home-provider/home-provider.component.html
+++ b/src/app/components/home/home-provider/home-provider.component.html
@@ -28,7 +28,7 @@
 
       <!-- Navigation links -->
       <div class="nav-links">
-        <a routerLink="/home-provider">HOME</a> | <a routerLink="/provider-profile">PROFILE</a> | <a href="#">SETTINGS</a>
+        <a routerLink="/home-provider">HOME</a> | <a routerLink="/provider-profile">PROFILE</a> | <a routerLink="/joined-events">JOINED EVENTS</a>
       </div>
     </div>
   </div>
