--- a/src/app/components/profiles/au-profile/au-profile.component.html
+++ b/src/app/components/profiles/au-profile/au-profile.component.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="nav-links">
-        <a href="/home-authenticated-user">HOME</a> | <a href="/au-profile">PROFILE</a> | <a href="#">INVITES</a>
+        <a href="/home-authenticated-user">HOME</a> | <a href="/au-profile">PROFILE</a> | <a routerLink="/joined-events">JOINED EVENTS</a>
       </div>
     </div>
   </div>
