--- a/src/app/components/event-management/my-events-od/my-events-od.component.html
+++ b/src/app/components/event-management/my-events-od/my-events-od.component.html
@@ -28,7 +28,7 @@
 
       <!-- Navigation links -->
       <div class="nav-links">
-        <a routerLink="/home-organizer">HOME</a> | <a routerLink="/organizer-profile">PROFILE</a> | <a href="#">SETTINGS</a>
+        <a routerLink="/home-organizer">HOME</a> | <a routerLink="/organizer-profile">PROFILE</a> | <a routerLink="/joined-events">JOINED EVENTS</a>
       </div>
     </div>
   </div>
