--- a/src/app/components/home/home-authenticated-user/home-authenticated-user.component.html
+++ b/src/app/components/home/home-authenticated-user/home-authenticated-user.component.html
@@ -21,7 +21,7 @@
 
       <!-- Navigation links -->
       <div class="nav-links">
-        <a href="/home-authenticated-user">HOME</a> | <a href="/au-profile">PROFILE</a> | <a href="#">INVITES</a>
+        <a href="/home-authenticated-user">HOME</a> | <a href="/au-profile">PROFILE</a> | <a routerLink="/joined-events">JOINED EVENTS</a>
       </div>
     </div>
   </div>
