--- a/src/app/components/profiles/organizer-profile/organizer-profile.component.html
+++ b/src/app/components/profiles/organizer-profile/organizer-profile.component.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="nav-links">
-        <a href="/home-organizer">HOME</a> | <a href="organizer-profile">PROFILE</a> | <a href="#">SETTINGS</a>
+        <a href="/home-organizer">HOME</a> | <a href="/organizer-profile">PROFILE</a> | <a routerLink="/joined-events">JOINED EVENTS</a>
       </div>
     </div>
   </div>
