--- a/src/app/components/profiles/view-provider-profile/view-provider-profile.component.html
+++ b/src/app/components/profiles/view-provider-profile/view-provider-profile.component.html
@@ -21,7 +21,7 @@
 
       <!-- Navigation links -->
       <div class="nav-links">
-        <a href="/home-organizer">HOME</a> | <a href="view-organizer-profile">PROFILE</a> | <a href="#">SETTINGS</a>
+        <a href="/home-organizer">HOME</a> | <a href="/organizer-profile">PROFILE</a> | <a routerLink="/joined-events">JOINED EVENTS</a>
       </div>
     </div>
   </div>
