--- a/src/app/components/profiles/au-profile/update-as-organizer/update-as-organizer.component.css
+++ b/src/app/components/profiles/au-profile/update-as-organizer/update-as-organizer.component.css
@@ -229,3 +229,34 @@ span {
   font-size: 16px;
   margin-bottom: 20px;
 }
+
+.location-autocomplete-group {
+  position: relative;
+  width: 100%;
+  z-index: 200;
+}
+
+.autocomplete-dropdown {
+  position: absolute;
+  background-color: #fff;
+  border: 1px solid #523D35;
+  border-radius: 5px;
+  width: 100%;
+  overflow-y: auto;
+  padding: 0;
+  list-style: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  font-family: 'Petrona', serif;
+  color: #523D35;
+  margin-top: 5px;
+  top: 100%; /* dropdown odmah ispod inputa */
+  left: 0;
+  max-height: 200px;
+}
+
+.autocomplete-dropdown li {
+  padding: 8px 12px;
+  cursor: pointer;
+  transition: background 0.2s;
+}
