upgraded header section

--- a/src/app/components/event-management/event-page/event-page.component.html
+++ b/src/app/components/event-management/event-page/event-page.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="event-management">
   <!-- Event Card (Image + Title + Event Details + Chat Button) -->
   <div class="event-card">
@@ -66,3 +67,4 @@
 
 <!-- Green Rectangle -->
 <div class="green-rectangle"></div>
+<app-footer></app-footer>
