--- a/src/app/components/profiles/au-profile/au-profile.component.html
+++ b/src/app/components/profiles/au-profile/au-profile.component.html
@@ -1,34 +1,4 @@
-<header>
-  <div class="header-background">
-    <div class="header-overlay">
-      <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
-
-      <!-- Right profile, notifications, and messages icons -->
-      <div class="header-icons">
-        <div class="notifications-container">
-          <mat-icon class="notifications-icon" (click)="openNotifications()">notifications</mat-icon>
-          <span *ngIf="unreadCount > 0" class="unread-count">{{ unreadCount }}</span>
-        </div>
-        <mat-icon class="messages-icon" routerLink="/messages">message</mat-icon>
-        <mat-icon class="profile-icon" routerLink="/au-profile">account_circle</mat-icon>
-      </div>
-
-      <mat-icon class="profile-icon" routerLink="/au-profile">account_circle</mat-icon>
-
-      <div class="logo-container">
-        <img class="logo">
-      </div>
-
-      <div class="event-planner">
-        <h1>Event Planner</h1>
-      </div>
-
-      <div class="nav-links">
-        <a href="/home-authenticated-user">HOME</a> | <a href="/au-profile">PROFILE</a> | <a routerLink="/joined-events">JOINED EVENTS</a>
-      </div>
-    </div>
-  </div>
-</header>
+<app-header></app-header>
 
 <div class="profile-container">
   <div class="profile-info">
@@ -91,9 +61,6 @@
     </div>
   </div>
 </div>
-
-<app-drawer-navbar-au [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-au>
-<app-notifications [isNotificationsOpen]="isNotificationsOpen"></app-notifications>
 
 <div class="decorative-lines">
   <app-lines></app-lines>
