--- a/src/app/components/event-type-management/event-type-management.component.html
+++ b/src/app/components/event-type-management/event-type-management.component.html
@@ -1,39 +1,4 @@
-<header>
-  <!-- Background image -->
-  <div class="header-background">
-    <!-- Rectangle with opacity and color -->
-    <div class="header-overlay">
-      <!-- Left burger icon for drawer navbar -->
-      <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
-
-      <!-- Right profile, notifications, and messages icons -->
-      <div class="header-icons">
-        <div class="notifications-container">
-          <mat-icon class="notifications-icon" (click)="openNotifications()">notifications</mat-icon>
-          <span *ngIf="unreadCount > 0" class="unread-count">{{ unreadCount }}</span>
-        </div>
-        <mat-icon class="messages-icon" routerLink="/messages">message</mat-icon>
-        <mat-icon class="profile-icon" routerLink="/login">account_circle</mat-icon>
-      </div>
-
-      <!-- Centered logo -->
-      <div class="logo-container">
-        <img class="logo">
-      </div>
-
-      <!-- "Event Planner" text -->
-      <div class="event-planner">
-        <h1>Event Planner</h1>
-      </div>
-
-      <!-- Navigation links -->
-      <div class="nav-links">
-        <a href="#">HOME</a> | <a href="#">PROFILE</a> | <a href="#">SETTINGS</a>
-      </div>
-    </div>
-  </div>
-</header>
-
+<app-header></app-header>
 <div class="event-type-management">
   <h2 class="section-title">Event types</h2>
 
