--- a/src/app/components/invitations/all-invitations-review-eo/all-invitations.component.html
+++ b/src/app/components/invitations/all-invitations-review-eo/all-invitations.component.html
@@ -1,40 +1,4 @@
-<header>
-  <!-- Background image -->
-  <div class="header-background">
-    <!-- Rectangle with opacity and color -->
-    <div class="header-overlay">
-      <!-- Left burger icon for drawer navbar -->
-      <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
-
-      <!-- Right profile, notifications, and messages icons -->
-      <div class="header-icons">
-        <div class="notifications-container">
-          <mat-icon class="notifications-icon" (click)="openNotifications()">notifications</mat-icon>
-          <span *ngIf="unreadCount > 0" class="unread-count">{{ unreadCount }}</span>
-        </div>
-        <mat-icon class="messages-icon" routerLink="/messages">message</mat-icon>
-        <mat-icon class="profile-icon" routerLink="/organizer-profile">account_circle</mat-icon>
-      </div>
-
-      <!-- Centered logo -->
-      <div class="logo-container">
-        <img class="logo">
-      </div>
-
-      <!-- "Event Planner" text -->
-      <div class="event-planner">
-        <h1>Event Planner</h1>
-      </div>
-
-      <!-- Navigation links -->
-      <div class="nav-links">
-        <a routerLink="/home-organizer">HOME</a> | <a routerLink="/organizer-profile">PROFILE</a> | <a routerLink="/joined-events">JOINED EVENTS</a>
-      </div>
-    </div>
-  </div>
-</header>
-
-
+<app-header></app-header>
 <div class="invitation-table-section">
   <h2 class="table-title">Invitations Overview</h2>
 
@@ -78,7 +42,4 @@
   </div>
 </div>
 
-
-<app-drawer-navbar-organizer [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-organizer>
-<app-notifications [isNotificationsOpen]="isNotificationsOpen"></app-notifications>
 <app-footer></app-footer>
