--- a/src/app/components/joined-events/joined-events.component.html
+++ b/src/app/components/joined-events/joined-events.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="events-list-section">
   <div class="header-bar">
     <h2 class="header-title">ALL JOINED EVENTS</h2>
@@ -33,3 +34,4 @@
     <button (click)="onPageChange(page + 1)" [disabled]="page >= totalPages - 1">Next</button>
   </div>
 </div>
+<app-footer></app-footer>
