--- a/src/app/components/profiles/organizer-profile/organizer-profile.component.html
+++ b/src/app/components/profiles/organizer-profile/organizer-profile.component.html
@@ -1,36 +1,4 @@
-<header>
-  <div class="header-background">
-    <div class="header-overlay">
-      <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
-
-      <!-- Right profile, notifications, and messages icons -->
-      <div class="header-icons">
-        <div class="notifications-container">
-          <mat-icon class="notifications-icon" (click)="openNotifications()">notifications</mat-icon>
-          <span *ngIf="unreadCount > 0" class="unread-count">{{ unreadCount }}</span>
-        </div>
-        <mat-icon class="messages-icon" routerLink="/messages">message</mat-icon>
-        <mat-icon class="profile-icon" routerLink="/organizer-profile">account_circle</mat-icon>
-      </div>
-
-      <div class="logo-container">
-        <img class="logo">
-      </div>
-
-      <div class="event-planner">
-        <h1>Event Planner</h1>
-      </div>
-
-      <div class="nav-links">
-        <a href="/home-organizer">HOME</a> | <a href="/organizer-profile">PROFILE</a> | <a routerLink="/joined-events">JOINED EVENTS</a>
-      </div>
-    </div>
-  </div>
-</header>
-
-<app-drawer-navbar-organizer [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-organizer>
-<app-notifications [isNotificationsOpen]="isNotificationsOpen"></app-notifications>
-
+<app-header></app-header>
 <app-info></app-info>
 
 <div class="decorative-lines">
