--- a/src/app/components/profiles/provider-profile/provider-profile.component.html
+++ b/src/app/components/profiles/provider-profile/provider-profile.component.html
@@ -1,35 +1,4 @@
-<header>
-  <div class="header-background">
-    <div class="header-overlay">
-      <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
-
-      <!-- Right profile, notifications, and messages icons -->
-      <div class="header-icons">
-        <div class="notifications-container">
-          <mat-icon class="notifications-icon" (click)="openNotifications()">notifications</mat-icon>
-          <span *ngIf="unreadCount > 0" class="unread-count">{{ unreadCount }}</span>
-        </div>
-        <mat-icon class="messages-icon" routerLink="/messages">message</mat-icon>
-        <mat-icon class="profile-icon" routerLink="/provider-profile">account_circle</mat-icon>
-      </div>
-
-      <mat-icon class="profile-icon" routerLink="/provider-profile">account_circle</mat-icon>
-
-      <div class="logo-container">
-        <img class="logo">
-      </div>
-
-      <div class="event-planner">
-        <h1>Event Planner</h1>
-      </div>
-
-      <div class="nav-links">
-        <a href="/home-provider">HOME</a> | <a href="provider-profile">PROFILE</a> | <a href="#">SETTINGS</a>
-      </div>
-    </div>
-  </div>
-</header>
-
+<app-header></app-header>
 <app-drawer-navbar-provider [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-provider>
 <app-notifications [isNotificationsOpen]="isNotificationsOpen"></app-notifications>
 
