--- a/src/app/components/profiles/view-organizer-profile/view-organizer-profile.component.html
+++ b/src/app/components/profiles/view-organizer-profile/view-organizer-profile.component.html
@@ -1,33 +1,4 @@
-<header>
-  <!-- Background image -->
-  <div class="header-background">
-    <!-- Rectangle with opacity and color -->
-    <div class="header-overlay">
-      <!-- Left burger icon for drawer navbar -->
-      <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
-
-      <!-- Right profile icon -->
-      <mat-icon class="profile-icon" routerLink="/organizer-profile">account_circle</mat-icon>
-
-      <!-- Centered logo -->
-      <div class="logo-container">
-        <img class="logo">
-      </div>
-
-      <!-- "Event Planner" text -->
-      <div class="event-planner">
-        <h1>Event Planner</h1>
-      </div>
-
-      <!-- Navigation links -->
-      <div class="nav-links">
-        <a href="/home-organizer">HOME</a> | <a href="/organizer-profile">PROFILE</a> | <a routerLink="/joined-events">JOINED EVENTS</a>
-      </div>
-    </div>
-  </div>
-</header>
-
-
+<app-header></app-header>
 <div class="profile-container">
   <div class="profile-photo-container" >
     <img [src]="getProfilePhotoUrl()"
