--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div *ngIf="event.id != -1; else loadingDiv" class="event-details-container">
   <h2>{{ event.name }}</h2>
   <p><strong>Location:</strong> {{ event.location }}</p>
@@ -14,3 +15,4 @@
 <ng-template #loadingDiv>
   <div style="width: 100%; height: 100%; cursor: progress !important;"></div>
 </ng-template>
+<app-footer></app-footer>
