fixed loading images from back

--- a/src/app/components/home/home-admin/home-admin.component.html
+++ b/src/app/components/home/home-admin/home-admin.component.html
@@ -4,5 +4,5 @@
 <div class="section-divider1"></div>
 <div class="section-divider2"></div>
 <app-hottest-services></app-hottest-services>
-<app-all-sevices></app-all-sevices>
+<app-all-services></app-all-services>
 <app-footer></app-footer>
