Replaced alert with popup message

--- a/src/app/communication/chat-sidebar/chat-sidebar.component.html
+++ b/src/app/communication/chat-sidebar/chat-sidebar.component.html
@@ -36,3 +36,11 @@
     <button (click)="sendMessage()">📩</button>
   </div>
 </div>
+
+<app-message-popup
+  [message]="successMessage"
+  [title]="isErrorPopup ? 'Error' : 'Success'"
+  [isVisible]="isPopupVisible"
+  [isError]="isErrorPopup"
+  (close)="onPopupClose()">
+</app-message-popup>
