--- a/src/app/offerings/price-list/price-list.component.html
+++ b/src/app/offerings/price-list/price-list.component.html
@@ -32,7 +32,7 @@
 
     <ng-container matColumnDef="discount">
       <th mat-header-cell *matHeaderCellDef>Discount</th>
-      <td mat-cell *matCellDef="let row">{{row.discount | currency}}</td>
+      <td mat-cell *matCellDef="let row">{{row.discount <= 1 ? row.discount : row.discount / 100 | percent}}</td>
     </ng-container>
 
     <ng-container matColumnDef="priceWithDiscount">
