--- a/src/app/offerings/services/add-service/add-service.component.css
+++ b/src/app/offerings/services/add-service/add-service.component.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  background: url('../../../assets/images/background.jpg') no-repeat center center;
+  background: url('../../../../assets/images/background.jpg') no-repeat center center;
   background-size: cover; /* Ensures the image covers the entire screen */
   background-attachment: fixed; /* Keeps the background fixed while scrolling */
   background-position: center;
