Implement delete service & move all popup notifications to shared module

--- a/src/app/offerings/services/edit-service/edit-service.component.css
+++ b/src/app/offerings/services/edit-service/edit-service.component.css
@@ -14,6 +14,17 @@ form {
 .actions-section {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   gap: 1rem;
   margin-top: 5%;
+}
+
+button[mat-button] {
+  margin: 0.5rem 0.5rem 0 0;
+  color: #523D35;
+}
+
+button[mat-raised-button] {
+  background-color: #523D35;
+  color: white;
 }
