--- a/src/app/offerings/services/edit-service/edit-service.component.html
+++ b/src/app/offerings/services/edit-service/edit-service.component.html
@@ -102,7 +102,8 @@
   </div>
 
   <div class="actions-section">
-    <button mat-stroked-button type="button" (click)="reset()">Reset</button>
+    <button mat-button type="button" (click)="delete()">Delete</button>
+    <button mat-button type="button" (click)="reset()">Reset</button>
     <button mat-raised-button type="submit">Save</button>
   </div>
 </form>
