--- a/src/app/offerings/products/product-details/product-details.component.css
+++ b/src/app/offerings/products/product-details/product-details.component.css
@@ -86,69 +86,48 @@ span {
   font-weight: bold;
 }
 
-/* Poboljšan stil za modal */
-.modal {
+footer {
+  display: flex;
+  flex-flow: row wrap-reverse;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  margin-top: 15%;
+}
+
+/* Popup Overlay */
+.popup-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   z-index: 1000;
 }
 
-.modal.show {
-  display: flex;
-}
 
-.modal-content {
-  background-color: #fff;
-  padding: 40px;
-  border-radius: 12px;
-  width: 450px; /* Povećana širina modala */
+.popup-container {
   position: relative;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-  text-align: center;
-  overflow-y: auto; /* Dodato za scroll ako je sadržaj veći */
-}
-
-.close {
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  font-size: 28px;
-  cursor: pointer;
-  color: #523D35;
-}
-
-h2 {
-  color: #523D35;
-  margin-bottom: 20px;
-  font-size: 22px; /* Povećana veličina fonta */
-}
-
-label {
-  display: block;
-  margin: 15px 0 5px;
-  font-weight: bold;
-  text-align: left;
-  color: #444;
-  font-size: 16px; /* Uvećana veličina fonta za bolje čitanje */
-}
-
-select, input {
+  padding: 1rem;
+  background-color: white;
+  border-radius: 20px;
   width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  font-size: 14px;
+  max-width: 400px;
 }
 
-button {
+.close-btn {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  color: #523D35;
+}
+
+button:not(.close-btn) {
   background-color: #523D35;
   color: white;
   border: none;
@@ -160,28 +139,4 @@ button {
   width: 50%; /* Povećana širina dugmeta */
   display: block;
   max-width: 11em;
-}
-
-form button {
-  margin: 20px auto 0;
-}
-
-button:hover {
-  background-color: #3e2b24;
-}
-
-/* Dodato za marginu ispod forme */
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-footer {
-  display: flex;
-  flex-flow: row wrap-reverse;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  padding: 1rem;
-  margin-top: 15%;
 }
